--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ oauthlib==3.1.1
 opencv-python==4.5.3.56
 opt-einsum==3.3.0
 optax==0.0.9
+protobuf==3.20.1
 Pillow==9.0.0
 scipy==1.7.1
 tensorflow==2.6.3
